--- a/custom_components/airtouch4_advanced/manifest.json
+++ b/custom_components/airtouch4_advanced/manifest.json
@@ -8,5 +8,5 @@
   "issue_tracker": "https://github.com/doenau/airtouch4/issues",
   "loggers": ["airtouch4pyapi"],
   "requirements": ["airtouch4pyapi==1.0.5"],
-  "version": "2.0.0-beta"
+  "version": "2.0.0"
 }
