--- a/.github/workflows/release-on-version-change.yml
+++ b/.github/workflows/release-on-version-change.yml
@@ -25,9 +25,12 @@ jobs:
           fi
 
       - name: Create Git Tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}  # Use PAT instead of default token
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
           git tag v${VERSION}
           git push origin v${VERSION}
 
