--- a/.github/workflows/release-on-version-change.yml
+++ b/.github/workflows/release-on-version-change.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git remote set-url origin https://${PAT}@github.com/${{ github.repository }}.git
+          git remote set-url origin "https://${PAT}@github.com/${{ github.repository }}.git"
           git tag v${VERSION}
           git push origin v${VERSION}
 
