--- a/.github/workflows/release-on-version-change.yml
+++ b/.github/workflows/release-on-version-change.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Create Git Tag
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}  # Use PAT instead of default token
+          PAT: ${{ secrets.GH_PAT }}  # Use PAT instead of default token
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
